# haskell-in-browser

./: CHANGELOG.md  LICENSE  README.md  bundle.js  haskell-in-browser.cabal  main.hs
app/: Counter.hs  Main.hs  Sokoban.hs  Traffic.hs  Tree.hs
count-words/: Main.hs
homework-5/: Lists.hs  WordCount.hs
homework-7/: Laziness.hs
