cabal-version:      3.0
name:               haskell-in-browser
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Oleksandr Bondarchuk
maintainer:         alex.coockoo@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable server
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,
                      text,
                      http-types,
                      warp,
                      wai,
                      blaze-markup,
                      blaze-html
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable counter
    import:           warnings
    main-is:          Counter.hs
    build-depends:    base ^>= 4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable sokoban
    ghc-options:      -threaded
    import:           warnings
    main-is:          Sokoban.hs
    build-depends:    base ^>= 4.17.2.1,
                      codeworld-api
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable traffic
    ghc-options:      -threaded
    import:           warnings
    main-is:          Traffic.hs
    build-depends:    base ^>= 4.17.2.1,
                      codeworld-api
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable tree
    ghc-options:      -threaded
    import:           warnings
    main-is:          Tree.hs
    build-depends:    base ^>= 4.17.2.1,
                      codeworld-api
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings
